tests/negative/missing-import.hs
-- EXPECT-ERROR: Could not find module ‘NoSuchModuleXYZ’
import ReWire
import NoSuchModuleXYZ

start :: Integer
start = 0

main = undefined
